--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <div class="bio">
           <h3 class="text-secondary">BIO</h3>
           <p>
-            I am a curious and cheerful person, who enjoys taking on challenging
+            I am a curious and happy person, who enjoys taking on challenging
             tasks. If given the oppertunity to lead a group of people, I am more
             than happy to take such a role. My 9 years of experience in
             leadership within e-sport has given me a greater understanding of
@@ -84,7 +84,7 @@
           <h6>League of Legends Coach</h6>
           <p>
             From my 9 years of playing the e-sport game League of Legends, I
-            learnt a thing or two. I achieved the highest rank in both of the
+            learned a thing or two. I achieved the highest rank in both of the
             competitive game modes and later moved on to competitive online
             tournaments for one year. Then I found the website Gamer Sensei,
             where users could pay you money to be coached - it felt like the
@@ -96,11 +96,11 @@
           <h6>Cashier</h6>
           <p>
             During my year of working at McDonalds Farsta Centrum, I learned to
-            work under presure, the importance of distrubuting work within a
-            team and prioritizing tasks when time is of the essence! However,
-            the most important skill I learnt from this working place, was the
-            ability to have a good time together with colleagues even though
-            each and one of were faced by an assembly line of new customers.
+            work well under presure, the importance of distrubuting work load
+            within a team and prioritizing tasks when time is of the essence! I
+            also, realized that it was possible to have a great time with
+            colleagues, even though we were faced by an assembly line of new
+            customers all the time.
           </p>
         </div>
       </div>
