--- a/work.html
+++ b/work.html
@@ -52,10 +52,10 @@
       <div class="projects">
         <!-- ITEM 1 -->
         <div class="item">
-          <a href="foxdrop.me" target="_blank">
+          <a href="https://foxdrop.me" target="_blank">
             <img src="img/projects/project1.jpg" alt="Project 1" />
           </a>
-          <a href="foxdrop.me" target="_blank" class="btn-light">
+          <a href="https://foxdrop.me" target="_blank" class="btn-light">
             <i class="fas fa-eye"></i> Project
           </a>
           <a
@@ -107,10 +107,14 @@
 
         <!-- ITEM 4 -->
         <div class="item">
-          <a href="foxdrop.me/games/gobblet/index.php" target="_blank">
+          <a href="https://foxdrop.me/games/gobblet/index.php" target="_blank">
             <img src="img/projects/project3.jpg" alt="Project 3" />
           </a>
-          <a href="foxdrop.me/games/gobblet/index.php" class="btn-light" target="_blank">
+          <a
+            href="https://foxdrop.me/games/gobblet/index.php"
+            class="btn-light"
+            target="_blank"
+          >
             <i class="fas fa-eye"></i> Project
           </a>
           <a
@@ -124,11 +128,11 @@
 
         <!-- ITEM 5 -->
         <div class="item">
-          <a href="foxdrop.me/games/typetosurvive/index.php" target="_blank">
+          <a href="https://foxdrop.me/games/typetosurvive/index.php" target="_blank">
             <img src="img/projects/project4.jpg" alt="Project 4" />
           </a>
           <a
-            href="foxdrop.me/games/typetosurvive/index.php"
+            href="https://foxdrop.me/games/typetosurvive/index.php"
             class="btn-light"
             target="_blank"
           >
@@ -145,11 +149,14 @@
 
         <!-- ITEM 6 -->
         <div class="item">
-          <a href="foxdrop.me/webApplications/travelAgency/index.html" target="_blank">
+          <a
+            href="https://foxdrop.me/webApplications/travelAgency/index.html"
+            target="_blank"
+          >
             <img src="img/projects/project5.jpg" alt="Project 5" />
           </a>
           <a
-            href="foxdrop.me/webApplications/travelAgency/index.html"
+            href="https://foxdrop.me/webApplications/travelAgency/index.html"
             class="btn-light"
             target="_blank"
           >
