--- a/work.html
+++ b/work.html
@@ -43,9 +43,7 @@
 
     <main id="work">
       <h1 class="lg-heading">My <span class="text-secondary">Work</span></h1>
-      <h2 class="sm-heading">
-        Check out some of my projects...
-      </h2>
+      <h2 class="sm-heading">Check out some of my projects...</h2>
       <div class="projects">
         <!-- ITEM 1 -->
         <div class="item" data-aos="fade-right">
@@ -53,7 +51,8 @@
             <img src="img/projects/project1.jpg" alt="Project 1" />
           </a>
           <a href="https://foxdropweb.000webhostapp.com/" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Showcase
+            <!-- Project [On all of these] -->
           </a>
           <a href="https://github.com/foxdroporg/FoxdropProject" target="_blank" class="btn-dark">
             <i class="fab fa-github"></i> Github
@@ -66,7 +65,7 @@
             <img src="img/projects/skogasResturant.png" alt="Project 2" />
           </a>
           <a href="https://christofferos.github.io/skogasResturant/" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Restaurant
           </a>
           <a href="https://github.com/Christofferos/skogasResturant" target="_blank" class="btn-dark">
             <i class="fab fa-github"></i> Github
@@ -79,7 +78,7 @@
             <img src="img/projects/project2.jpg" alt="Project 2" />
           </a>
           <a href="https://novaheadphones.netlify.com/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Product Marketing
           </a>
           <a href="https://github.com/Christofferos/nova-headphones-website" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
@@ -88,13 +87,13 @@
 
         <!-- ITEM 8 -->
         <div class="item" data-aos="fade-left">
-          <a href="https://github.com/Christofferos/React-Phone-E-Commerce" target="_blank">
-            <img src="img/projects/reactPhone.png" alt="Project 6" />
+          <a href="https://github.com/Christofferos/OpenPaymentsDemo" target="_blank">
+            <img src="img/projects/openPaymentsEurope.png" alt="Project 6" />
           </a>
           <a href="https://reactstorechristofferos.netlify.com" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Ecommerce Store
           </a>
-          <a href="https://github.com/Christofferos/React-Phone-E-Commerce" class="btn-dark" target="_blank">
+          <a href="https://github.com/Christofferos/OpenPaymentsDemo" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
@@ -109,7 +108,7 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Movie Database
           </a>
           <a
             href="https://github.com/foxdroporg/FoxdropProject/tree/master/webApplications/MDBWebsite"
@@ -130,35 +129,35 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Traveling Agency
           </a>
           <a href="https://github.com/Christofferos/travel-agency" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
-        <!-- ITEM 5 -->
-        <div class="item" data-aos="fade-right">
-          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" target="_blank">
-            <img src="img/projects/project3.jpg" alt="Project 3" />
-          </a>
-          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
-          </a>
-          <a href="https://github.com/Christofferos/gobblet-game" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
         <!-- ITEM 7 -->
-        <div class="item" data-aos="fade-left">
+        <div class="item" data-aos="fade-right">
           <a href="https://www.youtube.com/watch?v=PXRYrACqPbg" target="_blank">
             <img src="img/projects/project9.png" alt="Project 6" />
           </a>
           <a href="https://www.youtube.com/watch?v=PXRYrACqPbg" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Split-Screen Game
           </a>
           <a href="https://github.com/Christofferos/4PlayerLocalGame" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 5 -->
+        <div class="item" data-aos="fade-left">
+          <a href="https://confident-lalande-d61c58.netlify.app/" target="_blank">
+            <img src="img/projects/project13.png" alt="Project 13" />
+          </a>
+          <a href="https://confident-lalande-d61c58.netlify.app/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Server-Client Application
+          </a>
+          <a href="https://github.com/Christofferos/BattletronicsBrawl" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
@@ -173,7 +172,7 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Typeracer
           </a>
           <a href="https://github.com/Christofferos/typing-racer/tree/master" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
@@ -186,7 +185,7 @@
             <img src="img/projects/project10.png" alt="Project 4" />
           </a>
           <a href="https://christofferos.github.io/MathRush/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Math Competition
           </a>
           <a href="https://github.com/Christofferos/MathRush" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
@@ -203,7 +202,7 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Geolocation & Weather
           </a>
           <a
             href="https://github.com/foxdroporg/FoxdropProject/tree/master/webApplications"
@@ -216,22 +215,46 @@
 
         <!-- ITEM 8 -->
         <div class="item" data-aos="fade-left">
+          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" target="_blank">
+            <img src="img/projects/project3.jpg" alt="Project 3" />
+          </a>
+          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> E-Board Game
+          </a>
+          <a href="https://github.com/Christofferos/gobblet-game" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item" data-aos="fade-right">
+          <a href="https://mystifying-austin-efe3a7.netlify.app/" target="_blank">
+            <img src="img/projects/project14.png" alt="Project 14" />
+          </a>
+          <a href="https://mystifying-austin-efe3a7.netlify.app/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> TCP/IP Snake Game
+          </a>
+          <a href="https://github.com/Christofferos/SnakeShowdown" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item" data-aos="fade-left">
           <a href="https://github.com/Christofferos/2D-TopDownShooter" target="_blank">
             <img src="img/projects/project6.jpg" alt="Project 6" />
           </a>
           <a href="https://github.com/Christofferos/2D-TopDownShooter" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Project
+            <i class="fas fa-eye"></i> Story-Driven Game
           </a>
           <a href="https://github.com/Christofferos/2D-TopDownShooter" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
+
+        <!-- ITEM 5 -->
       </div>
     </main>
 
-    <footer id="main-footer">
-      Copyright &copy; 2020
-    </footer>
+    <footer id="main-footer">Copyright &copy; 2020</footer>
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
