--- a/work.html
+++ b/work.html
@@ -51,8 +51,7 @@
             <img src="img/projects/project1.jpg" alt="Project 1" />
           </a>
           <a href="https://foxdropweb.000webhostapp.com/" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Showcase
-            <!-- Project [On all of these] -->
+            <i class="fas fa-eye"></i> Showcase ( <i class="fa fa-suitcase" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/foxdroporg/FoxdropProject" target="_blank" class="btn-dark">
             <i class="fab fa-github"></i> Github
@@ -61,45 +60,114 @@
 
         <!-- ITEM 2 -->
         <div class="item" data-aos="fade-left">
-          <a href="https://christofferos.github.io/skogasResturant/" target="_blank">
-            <img src="img/projects/skogasResturant.png" alt="Project 2" />
-          </a>
-          <a href="https://christofferos.github.io/skogasResturant/" target="_blank" class="btn-light">
-            <i class="fas fa-eye"></i> Restaurant
-          </a>
-          <a href="https://github.com/Christofferos/skogasResturant" target="_blank" class="btn-dark">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 3 -->
-        <div class="item" data-aos="fade-right">
-          <a href="https://novaheadphones.netlify.com/" target="_blank">
-            <img src="img/projects/project2.jpg" alt="Project 2" />
-          </a>
-          <a href="https://novaheadphones.netlify.com/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Product Marketing
-          </a>
-          <a href="https://github.com/Christofferos/nova-headphones-website" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 8 -->
-        <div class="item" data-aos="fade-left">
           <a href="https://github.com/Christofferos/OpenPaymentsDemo" target="_blank">
             <img src="img/projects/openPaymentsEurope.png" alt="Project 6" />
           </a>
           <a href="https://reactstorechristofferos.netlify.com" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Ecommerce Store
+            <i class="fas fa-eye"></i> Ecommerce Store ( <i class="fa fa-mobile" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/Christofferos/OpenPaymentsDemo" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
+        <!-- ITEM 3 -->
+        <div class="item" data-aos="fade-right">
+          <a href="https://airbnbwebsite.netlify.app/" target="_blank">
+            <img src="img/projects/project15.png" alt="Project 6" />
+          </a>
+          <a href="https://airbnbwebsite.netlify.app/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Airbnb ( <i class="fa fa-home" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/airbnbProject" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 4  -->
+        <div class="item" data-aos="fade-left">
+          <a href="https://trelloboard.netlify.app/" target="_blank">
+            <img src="img/projects/trelloProject.png" alt="Project 6" />
+          </a>
+          <a href="https://trelloboard.netlify.app/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Trello Board ( <i class="fa fa-trello" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/trello" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 5 -->
+        <div class="item" data-aos="fade-right">
+          <a href="https://christofferos.github.io/skogasResturant/" target="_blank">
+            <img src="img/projects/skogasResturant.png" alt="Project 2" />
+          </a>
+          <a href="https://christofferos.github.io/skogasResturant/" target="_blank" class="btn-light">
+            <i class="fas fa-eye"></i> Restaurant ( <i class="fa fa-cutlery" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/skogasResturant" target="_blank" class="btn-dark">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 6 -->
+        <div class="item" data-aos="fade-left">
+          <a href="https://novaheadphones.netlify.com/" target="_blank">
+            <img src="img/projects/project2.jpg" alt="Project 2" />
+          </a>
+          <a href="https://novaheadphones.netlify.com/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Product Marketing ( <i class="fa fa-headphones" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/nova-headphones-website" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 7 -->
+        <div class="item" data-aos="fade-right">
+          <a href="https://foxdropweb.000webhostapp.com/webApplications/travelAgency/index.html" target="_blank">
+            <img src="img/projects/project5.jpg" alt="Project 5" />
+          </a>
+          <a
+            href="https://foxdropweb.000webhostapp.com/webApplications/travelAgency/index.html"
+            class="btn-light"
+            target="_blank"
+          >
+            <i class="fas fa-eye"></i> Traveling Agency ( <i class="fa fa-plane" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/travel-agency" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 8 -->
+        <div class="item" data-aos="fade-left">
+          <a href="https://www.youtube.com/watch?v=PXRYrACqPbg" target="_blank">
+            <img src="img/projects/project9.png" alt="Project 6" />
+          </a>
+          <a href="https://store.steampowered.com/app/1385690/Battletronics/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Split-Screen Game ( <i class="fa fa-trophy" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/4PlayerLocalGame" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
         <!-- ITEM 9 -->
         <div class="item" data-aos="fade-right">
+          <a href="https://confident-lalande-d61c58.netlify.app/" target="_blank">
+            <img src="img/projects/project13.png" alt="Project 13" />
+          </a>
+          <a href="https://confident-lalande-d61c58.netlify.app/" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> Server-Client App ( <i class="fa fa-gamepad" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/BattletronicsBrawl" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 10 -->
+        <div class="item" data-aos="fade-left">
           <a href="https://foxdropweb.000webhostapp.com/webApplications/MDBWebsite/index.html" target="_blank">
             <img src="img/projects/project7.png" alt="Project 6" />
           </a>
@@ -108,7 +176,7 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Movie Database
+            <i class="fas fa-eye"></i> Movie Database ( <i class="fa fa-film" aria-hidden="true"></i> )
           </a>
           <a
             href="https://github.com/foxdroporg/FoxdropProject/tree/master/webApplications/MDBWebsite"
@@ -119,75 +187,33 @@
           </a>
         </div>
 
-        <!-- ITEM 4 -->
-        <div class="item" data-aos="fade-left">
-          <a href="https://foxdropweb.000webhostapp.com/webApplications/travelAgency/index.html" target="_blank">
-            <img src="img/projects/project5.jpg" alt="Project 5" />
-          </a>
-          <a
-            href="https://foxdropweb.000webhostapp.com/webApplications/travelAgency/index.html"
-            class="btn-light"
-            target="_blank"
-          >
-            <i class="fas fa-eye"></i> Traveling Agency
-          </a>
-          <a href="https://github.com/Christofferos/travel-agency" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 7 -->
+        <!-- ITEM 11 -->
         <div class="item" data-aos="fade-right">
-          <a href="https://www.youtube.com/watch?v=PXRYrACqPbg" target="_blank">
-            <img src="img/projects/project9.png" alt="Project 6" />
-          </a>
-          <a href="https://www.youtube.com/watch?v=PXRYrACqPbg" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Split-Screen Game
-          </a>
-          <a href="https://github.com/Christofferos/4PlayerLocalGame" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 5 -->
-        <div class="item" data-aos="fade-left">
-          <a href="https://confident-lalande-d61c58.netlify.app/" target="_blank">
-            <img src="img/projects/project13.png" alt="Project 13" />
-          </a>
-          <a href="https://confident-lalande-d61c58.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Server-Client Application
-          </a>
-          <a href="https://github.com/Christofferos/BattletronicsBrawl" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <div class="item" data-aos="fade-right">
-          <a href="https://airbnbwebsite.netlify.app/" target="_blank">
-            <img src="img/projects/project15.png" alt="Project 6" />
-          </a>
-          <a href="https://airbnbwebsite.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Airbnb
-          </a>
-          <a href="https://github.com/Christofferos/airbnbProject" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 6 -->
-        <div class="item" data-aos="fade-left">
           <a href="https://christofferos.github.io/MathRush/" target="_blank">
             <img src="img/projects/project10.png" alt="Project 4" />
           </a>
           <a href="https://christofferos.github.io/MathRush/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Math Competition
+            <i class="fas fa-eye"></i> Math Competition ( <i class="fa fa-book" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/Christofferos/MathRush" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
-        <!-- ITEM 10 -->
+        <!-- ITEM 12 -->
+        <div class="item" data-aos="fade-left">
+          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" target="_blank">
+            <img src="img/projects/project3.jpg" alt="Project 3" />
+          </a>
+          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" class="btn-light" target="_blank">
+            <i class="fas fa-eye"></i> E-Board Game ( <i class="fa fa-star" aria-hidden="true"></i> )
+          </a>
+          <a href="https://github.com/Christofferos/gobblet-game" class="btn-dark" target="_blank">
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <!-- ITEM 13 -->
         <div class="item" data-aos="fade-right">
           <a href="https://foxdropweb.000webhostapp.com/webApplications/geolocation.php" target="_blank">
             <img src="img/projects/project8.png" alt="Project 6" />
@@ -197,7 +223,7 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Geolocation & Weather
+            <i class="fas fa-eye"></i> Location data ( <i class="fa fa-map-marker" aria-hidden="true"></i> )
           </a>
           <a
             href="https://github.com/foxdroporg/FoxdropProject/tree/master/webApplications"
@@ -208,21 +234,8 @@
           </a>
         </div>
 
-        <!-- ITEM 8 -->
+        <!-- ITEM 14 -->
         <div class="item" data-aos="fade-left">
-          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" target="_blank">
-            <img src="img/projects/project3.jpg" alt="Project 3" />
-          </a>
-          <a href="https://foxdropweb.000webhostapp.com/games/gobblet/index.php" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> E-Board Game
-          </a>
-          <a href="https://github.com/Christofferos/gobblet-game" class="btn-dark" target="_blank">
-            <i class="fab fa-github"></i> Github
-          </a>
-        </div>
-
-        <!-- ITEM 6 -->
-        <div class="item" data-aos="fade-right">
           <a href="https://foxdropweb.000webhostapp.com/games/typetosurvive/index.php" target="_blank">
             <img src="img/projects/project4.jpg" alt="Project 4" />
           </a>
@@ -231,42 +244,42 @@
             class="btn-light"
             target="_blank"
           >
-            <i class="fas fa-eye"></i> Typeracer
+            <i class="fas fa-eye"></i> Typeracer ( <i class="fa fa-keyboard-o" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/Christofferos/typing-racer/tree/master" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
-        <div class="item" data-aos="fade-left">
+        <!-- ITEM 15 -->
+        <div class="item" data-aos="fade-right">
           <a href="https://mystifying-austin-efe3a7.netlify.app/" target="_blank">
             <img src="img/projects/project14.png" alt="Project 14" />
           </a>
           <a href="https://mystifying-austin-efe3a7.netlify.app/" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> TCP/IP Snake Game
+            <i class="fas fa-eye"></i> TCP/IP Snake Game ( <i class="fa fa-share" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/Christofferos/SnakeShowdown" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
 
-        <div class="item" data-aos="fade-right">
+        <!-- ITEM 16 -->
+        <div class="item" data-aos="fade-left">
           <a href="https://github.com/Christofferos/2D-TopDownShooter" target="_blank">
             <img src="img/projects/project6.jpg" alt="Project 6" />
           </a>
           <a href="https://github.com/Christofferos/2D-TopDownShooter" class="btn-light" target="_blank">
-            <i class="fas fa-eye"></i> Story-Driven Game
+            <i class="fas fa-eye"></i> Story-Driven Game ( <i class="fa fa-camera" aria-hidden="true"></i> )
           </a>
           <a href="https://github.com/Christofferos/2D-TopDownShooter" class="btn-dark" target="_blank">
             <i class="fab fa-github"></i> Github
           </a>
         </div>
-
-        <!-- ITEM 5 -->
       </div>
     </main>
 
-    <footer id="main-footer">&copy; 2020 Kristopher Werlinder All Rights Reserved</footer>
+    <footer id="main-footer">&copy; 2021 Kristopher Werlinder All Rights Reserved</footer>
     <script src="js/main.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
